# lsif/docs/api.yaml
@@ -253,44 +253,6 @@ paths:
           description: No content
         '404':
           description: Not found
-  /jobs:
-    post:
-      description: Immediately queue a job.
-      tags:
-        - Jobs
-      requestBody:
-        description: The job description.
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/JobDescription'
-      parameters:
-        - name: blocking
-          in: query
-          description: If true, block the request until the job has completed.
-          required: false
-          schema:
-            type: boolean
-        - name: maxWait
-          in: query
-          description: The maximum time (in seconds) that request will block. The job will continue asynchronously if this much time has elapesed.
-          required: false
-          schema:
-            type: number
-      responses:
-        '200':
-          description: Processed (synchronously)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EnqueueResponse'
-        '202':
-          description: Accepted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EnqueueResponse'
   /jobs/stats:
     get:
       description: Get the current counts of jobs by their state.
@@ -316,11 +278,10 @@ paths:
           schema:
             type: string
             enum:
-              - processing
-              - errored
-              - completed
               - queued
-              - scheduled
+              - completed
+              - errored
+              - processing
         - name: query
           in: query
           description: A search query applied over job type, job arguments, and failure (reason and stacktrace) properties.
@@ -546,28 +507,11 @@ components:
         queuedCount:
           type: number
           description: The number of queued jobs.
-        scheduledCount:
-          type: number
-          description: The number of scheduled jobs.
       required:
-        - processing
-        - errored
-        - completed
         - queued
-        - scheduled
-      additionalProperties: false
-    JobDescription:
-      type: object
-      description: A payload indicating a job to enqueue.
-      properties:
-        name:
-          type: string
-          description: The job type.
-          enum:
-            - clean-old-jobs
-            - clean-failed-jobs
-      required:
-        - name
+        - completed
+        - errored
+        - processing
       additionalProperties: false
     EnqueueResponse:
       type: object
@@ -620,11 +564,10 @@ components:
           type: string
           description: The job's current state.
           enum:
-            - processing
-            - errored
-            - completed
             - queued
-            - scheduled
+            - completed
+            - errored
+            - processing
         failure:
           type: object
           description: Metadata about a failed job.
@@ -633,14 +576,14 @@ components:
             summary:
               type: string
               description: A brief description of why the job failed.
-            stacktraces:
+            stacktrace:
               type: array
               description: A stacktrace for each attempt of the failed job.
               items:
                 type: string
           required:
             - summary
-            - stacktraces
+            - stacktrace
           additionalProperties: false
         queuedAt:
           type: string
