# lsif/src/server/routes/lsif.ts
@@ -10,15 +10,13 @@ import { addTags, logAndTraceCall, TracingContext } from '../../shared/tracing'
 import { Backend, ReferencePaginationCursor } from '../backend/backend'
 import { checkSchema, ParamSchema } from 'express-validator'
 import { encodeCursor } from '../pagination/cursor'
-import { enqueue } from '../../shared/queue/queue'
+import { Queue } from '../../shared/uploads/uploads'
 import { Logger } from 'winston'
 import { lsp } from 'lsif-protocol'
 import { nextLink } from '../pagination/link'
 import { pipeline as _pipeline } from 'stream'
 import { promisify } from 'util'
-import { Queue } from 'bull'
 import { Span, Tracer } from 'opentracing'
-import { waitForJob } from '../jobs/blocking'
 import { wrap } from 'async-middleware'
 import { extractLimitOffset } from '../pagination/limit-offset'
 
@@ -28,16 +26,11 @@ const pipeline = promisify(_pipeline)
  * Create a router containing the LSIF upload and query endpoints.
  *
  * @param backend The backend instance.
- * @param queue The queue containing LSIF jobs.
+ * @param queue The queue instance.
  * @param logger The logger instance.
  * @param tracer The tracer instance.
  */
-export function createLsifRouter(
-    backend: Backend,
-    queue: Queue,
-    logger: Logger,
-    tracer: Tracer | undefined
-): express.Router {
+export function createLsifRouter(backend: Backend, queue: Queue, logger: Logger, tracer?: Tracer): express.Router {
     const router = express.Router()
 
     // Used to validate commit hashes are 40 hex digits
@@ -94,21 +87,23 @@ export function createLsifRouter(
                 const output = fs.createWriteStream(filename)
                 await logAndTraceCall(ctx, 'Uploading dump', () => pipeline(req, output))
 
-                // Enqueue convert job
-                logger.debug('Enqueueing convert job', { repository, commit, root })
-                const args = { repository, commit, root, filename }
-                const job = await enqueue(queue, 'convert', args, {}, tracer, ctx.span)
+                // Add upload record
+                const upload = await queue.enqueue({ repository, commit, root, filename }, tracer, ctx.span)
 
-                if (blocking && (await waitForJob(job, maxWait))) {
-                    // Job succeeded while blocked, send success
-                    res.status(200).send({ id: job.id })
-                    return
+                if (blocking) {
+                    logger.debug('Blocking on upload conversion', { repository, commit, root })
+
+                    if (await queue.waitForUploadToConvert(upload.id, maxWait)) {
+                        // Upload converted successfully while blocked, send success
+                        res.status(200).send({ id: upload.id })
+                        return
+                    }
                 }
 
-                // Job will complete asynchronously, send an accepted response with
-                // the job id so that the client can continue to track the progress
+                // Upload conversion will complete asynchronously, send an accepted response
+                // with the upload id so that the client can continue to track the progress
                 // asynchronously.
-                res.status(202).send({ id: job.id })
+                res.status(202).send({ id: upload.id })
             }
         )
     )
