# lsif/src/server/server.ts
@@ -9,22 +9,22 @@ import promClient from 'prom-client'
 import { Backend } from './backend/backend'
 import { Connection } from 'typeorm'
 import { createDumpRouter } from './routes/dumps'
-import { createJobRouter } from './routes/jobs'
 import { createLogger } from '../shared/logging'
 import { createLsifRouter } from './routes/lsif'
 import { createMetaRouter } from './routes/meta'
 import { createPostgresConnection } from '../shared/database/postgres'
-import { createQueue, ensureOnlyRepeatableJob } from '../shared/queue/queue'
 import { createTracer } from '../shared/tracing'
 import { dbFilename, dbFilenameOld, ensureDirectory } from '../shared/paths'
 import { default as tracingMiddleware } from 'express-opentracing'
-import { defineRedisCommands } from './redis/redis'
 import { errorHandler } from './middleware/errors'
 import { logger as loggingMiddleware } from 'express-winston'
 import { Logger } from 'winston'
 import { metricsMiddleware } from './middleware/metrics'
 import { waitForConfiguration } from '../shared/config/config'
 import { XrepoDatabase } from '../shared/xrepo/xrepo'
+import { Queue } from '../shared/uploads/uploads'
+import { createUploadRouter } from './routes/uploads'
+import { startTasks } from './tasks/runner'
 
 /**
  * Runs the HTTP server which accepts LSIF dump uploads and responds to LSIF requests.
@@ -52,34 +52,18 @@ async function main(logger: Logger): Promise<void> {
     await ensureDirectory(path.join(settings.STORAGE_ROOT, constants.TEMP_DIR))
     await ensureDirectory(path.join(settings.STORAGE_ROOT, constants.UPLOADS_DIR))
 
-    // Create cross-repo database
+    // Create cross-repo database, backend, and queue
     const connection = await createPostgresConnection(fetchConfiguration(), logger)
     const xrepoDatabase = new XrepoDatabase(connection, settings.STORAGE_ROOT)
     const backend = new Backend(settings.STORAGE_ROOT, xrepoDatabase, fetchConfiguration)
+    const queue = new Queue(connection)
 
     // Temporary migrations
     await moveDatabaseFilesToSubdir() // TODO - remove after 3.12
     await ensureFilenamesAreIDs(connection) // TODO - remove after 3.10
 
-    // Create queue to publish convert
-    const queue = createQueue(settings.REDIS_ENDPOINT, logger)
-
-    // Schedule jobs on timers
-    await ensureOnlyRepeatableJob(queue, 'clean-old-jobs', {}, settings.CLEAN_OLD_JOBS_INTERVAL * 1000)
-    await ensureOnlyRepeatableJob(queue, 'clean-failed-jobs', {}, settings.CLEAN_FAILED_JOBS_INTERVAL * 1000)
-
-    // Update queue size metric on a timer
-    setInterval(() => {
-        queue
-            .getJobCountByTypes('waiting')
-            // The type of this method is wrong in the types package: it says that
-            // it returns a counts object, but it really returns a scalar count.
-            .then((count: unknown) => metrics.queueSizeGauge.set(count as number))
-            .catch(() => {})
-    }, 1000)
-
-    // Register the required commands on the queue's Redis client
-    const scriptedClient = await defineRedisCommands(queue.client)
+    // Start background tasks
+    startTasks(connection, queue, logger)
 
     const app = express()
 
@@ -92,7 +76,7 @@ async function main(logger: Logger): Promise<void> {
             winstonInstance: logger,
             level: 'debug',
             ignoredRoutes: ['/ping', '/healthz', '/metrics'],
-            requestWhitelist: ['method', 'url', 'query'],
+            requestWhitelist: ['method', 'url'],
             msg: 'Handled request',
         })
     )
@@ -100,9 +84,9 @@ async function main(logger: Logger): Promise<void> {
 
     // Register endpoints
     app.use(createMetaRouter())
-    app.use(createLsifRouter(backend, queue, logger, tracer))
     app.use(createDumpRouter(backend))
-    app.use(createJobRouter(queue, scriptedClient, logger, tracer))
+    app.use(createUploadRouter(queue))
+    app.use(createLsifRouter(backend, queue, logger, tracer))
 
     // Error handler must be registered last
     app.use(errorHandler(logger))
